--- a/questionario/bloco6-/q28.md
+++ b/questionario/bloco6-/q28.md
@@ -1,46 +1,26 @@
 28. #include <iostream>
-#include <string>
 using namespace std;
 
-// Definição da estrutura Pessoa
-struct Pessoa {
-    string nome;
-    int idade;
-    float altura;
-};
-
-// Função que imprime os dados da pessoa usando ponteiro
-void imprimirDados(Pessoa* p) {
-    cout << "\nDADOS PESSOAIS:" << endl;
-    cout << "Nome: " << p->nome << endl;
-    cout << "Idade: " << p->idade << " anos" << endl;
-    cout << "Altura: " << p->altura << " metros\n" << endl;
+// Função template para trocar valores usando ponteiros
+template <typename T>
+void trocarValores(T* ptr1, T* ptr2) {
+    T temp = *ptr1;     // Armazena o valor do primeiro ponteiro
+    *ptr1 = *ptr2;      // Atribui o valor do segundo ponteiro ao primeiro
+    *ptr2 = temp;       // Atribui o valor temporário ao segundo ponteiro
 }
 
 int main() {
-    // Variáveis para armazenar os dados
-    string nome_pessoa;
-    int idade_pessoa;
-    float altura_pessoa;
+    // Demonstração com inteiros
+    int a = 10, b = 20;
+    cout << "Antes da troca (int): a = " << a << ", b = " << b << endl;
+    trocarValores(&a, &b);
+    cout << "Depois da troca (int): a = " << a << ", b = " << b << endl << endl;
 
-    // Solicita os dados ao usuário
-    cout << "Digite o nome: ";
-    getline(cin, nome_pessoa);
-
-    cout << "Digite a idade: ";
-    cin >> idade_pessoa;
-
-    cout << "Digite a altura (em metros): ";
-    cin >> altura_pessoa;
-
-    // Cria e preenche a estrutura
-    Pessoa pessoa;
-    pessoa.nome = nome_pessoa;
-    pessoa.idade = idade_pessoa;
-    pessoa.altura = altura_pessoa;
-
-    // Imprime os dados passando o ponteiro
-    imprimirDados(&pessoa);
+    // Demonstração com floats
+    float x = 3.14f, y = 2.71f;
+    cout << "Antes da troca (float): x = " << x << ", y = " << y << endl;
+    trocarValores(&x, &y);
+    cout << "Depois da troca (float): x = " << x << ", y = " << y << endl << endl;
 
     return 0;
 }
